Adds update release endpoint
