# src/app.ts
@@ -6,6 +6,7 @@ import { CreateReleaseEndpoint } from './endpoints/create-release-endpoint';
 import { StartTrainEndpoint } from './endpoints/start-train-endpoint';
 import swagger from 'swagger-ui-express';
 import * as swaggerDocument from '../swagger.json';
+import { UpdateReleaseEndpoint } from './endpoints/update-release-endpoint';
 
 const app = express();
 app.use(bodyParser.json());
@@ -38,6 +39,16 @@ app.post('/startTrain', (req, res) => {
     dependencies.config.secondsToConfirmationTimeout * 1000 + 10000
   );
   new StartTrainEndpoint(dependencies).execute(req.body).subscribe(
+    (x) => res.send(x),
+    (error) => {
+      console.log(error);
+      res.send(error);
+    }
+  );
+});
+
+app.post('/updateRelease', (req, res) => {
+  new UpdateReleaseEndpoint(dependencies).execute(req.body).subscribe(
     (x) => res.send(x),
     (error) => {
       console.log(error);
